--- a/locales/en.json
+++ b/locales/en.json
@@ -1085,6 +1085,10 @@
           "text3": "Gambling Therapy"
         }
       }
+    },
+    "riskWarnings": {
+      "title": "Risk Warnings",
+      "text":"You understand that by participating in the games, you risk losing the money deposited to your\n      account on www.ninecasino.com; In some jurisdictions, online gambling may be illegal. You\n      understand and agree that www.ninecasino.com is not able to provide you legal advice or\n      guarantees regarding the legality of your use of the services of the Website. The Company does\n      not affirm that the services of the Website comply with legal requirements in your\n      jurisdiction. You use the services provided by www.ninecasino.com of your own choice and at\n      your sole discretion, as well, assuming the risk of liability, making a decision as to whether\n      the use of the services of the Website is legal in accordance with the current legislation of\n      your jurisdiction.You log in the Website and participate in the games at your own risk."
     }
   }
 }
