--- a/locales/de.json
+++ b/locales/de.json
@@ -649,40 +649,40 @@
       }
     },
     "privacyPolicyPage": {
-      "title": "Privacy Policy",
+      "title": "DATENSCHUTZ",
       "introduction": {
-        "title": "Introduction",
+        "title": "EINLEITUNG",
         "text": [
-          "This Privacy Policy, which was last updated on 04/06/2020, sets out the data processing\n          practices carried out by Ninecasino. Here at Ninecasino we like making things simple and\n          easy for our customers and that includes being clear, transparent and open about what we\n          collect, and how and why we use the data we collect, so this page goes into great detail.",
-          "Our Policy explains how we use your personal data, whether you are just visiting, making a\n          deposit or playing one of our games. This policy includes information you may not already\n          know about your data privacy rights, circumstances in which we share and obtain\n          information about you and how we use it to personalize the marketing you receive, so\n          please take time to read all the sections carefully.",
-          "If we make any material updates to this Policy, we will inform you.",
-          "Please note that all our employees undertake regular training on Information Security and\n          are required to comply with confidentially obligations as well as internal policies and\n          procedures whenever they handle your information.",
-          "We hope you will find this page helpful, but should you have any concerns or questions,   regarding Data Protection, please feel free to contact our Data Protection Officer at dpo@ninecasino.com."
+          "Die hier vorliegenden Datenschutzrichtlinien mit Stand vom 6. April 2020 legen die von Ninecasino geübte Datenverarbeitungspraxis fest. Bei Ninecasino bemühen wir uns darum, alle Angelegenheiten für unsere Kunden so angenehm und einfach wie möglich zu gestalten, dazu gehören auch Eindeutigkeit, Transparenz und Aufrichtigkeit in Bezug darauf, was wir erfassen sowie wie und weshalb wir die gesammelten Daten verwenden. Aus diesem Grund ist diese Seite ausgesprochen ausführlich.",
+          "Unsere Richtlinien erläutern, wie Ihre personenbezogenen Daten von uns verwendet werden, je nachdem ob Sie nur als Gast hereinschauen, eine Einzahlung tätigen oder eines unserer Spiele spielen. Diese Richtlinien enthalten Ihnen möglicherweise noch unbekannte Angaben zu Ihren Datenschutzrechten, den Umständen, unter denen wir Informationen über Sie weitergeben oder erfassen, sowie dazu, wie wir sie verwenden, um die Werbung, die Sie erhalten, auf Sie zuzuschneiden. Lassen Sie sich also bitte Zeit und lesen Sie sich alle Abschnitte aufmerksam durch. ",
+          "Bei wesentlichen Änderungen an den Richtlinien werden wir Sie davon in Kenntnis setzen.",
+          "Nehmen Sie bitte zur Kenntnis, dass alle bei uns Beschäftigten regelmäßig in Sachen Datenschutz geschult werden und im Umgang mit Ihren Daten Vertraulichkeitsverpflichtungen sowie internen Richtlinien und Verfahren unterliegen.",
+          "Wir hoffen, dass Ihnen diese Seite hilft. Sollten Sie dennoch Bedenken oder Fragen zum Datenschutz haben, wenden Sie sich bitte jederzeit an unseren Datenschutzbeauftragten unter dpo@ninecasino.com."
         ]
       },
       "policyPromise": {
-        "title": "Our Privacy Policy Promise",
+        "title": "UNSER DATENSCHUTZVERSPRECHEN",
         "text": [
-          "Our Privacy Policy Promise Ninecasino will always value and respect the privacy of each\n          and every one of its customers. Your privacy is important both to you and to us and we\n          make the following promise to you:",
-          "Ninecasino is committed to protecting your privacy. We believe in using your personal\n          information to make things simpler and better for you. We will always keep your personal\n          information safe. We’ll be clear and open with you about why we collect your personal\n          information and how we use it. Where you have choices or rights, we’ll explain them to you and respect your wishes."
+          "Ninecasino gelobt, den Datenschutz aller und jeder bzw. jedes seiner Kundinnen und Kunden stets zu achten und respektvoll zu behandeln. Die Sicherheit Ihrer Daten ist sowohl für Sie als auch für uns wichtig, deshalb geben wir Ihnen folgendes Versprechen:",
+          "Ninecasino fühlt sich dem Schutz Ihrer Daten verpflichtet. Wir glauben, dass die Nutzung Ihrer personenbezogenen Daten dazu beiträgt, die Dinge für Sie einfacher und besser zu machen. Ihre personenbezogenen Daten werden von uns stets sicher verwahrt. Wir sind Ihnen gegenüber aufrichtig und offen bezüglich der Gründe dafür, dass wir Ihre personenbezogenen Daten erfassen sowie dazu, wie wir sie verwenden. Wenn Sie die Wahl haben oder rechte geltend machen können, klären wir Sie diesbezüglich auf und achten Ihre Wünsche."
         ]
       },
       "useYourInformation": {
-        "title": "HOW WE USE YOUR INFORMATION",
-        "text": "We process the Personal Information we collect from you in order to deliver our services.\n          In particular, we will use your data for the following purposes:",
+        "title": "WIE IHRE DATEN VERWENDET WERDEN",
+        "text": "Wir verarbeiten die von uns erfassten personenbezogenen Daten zur Erbringung unserer Dienstleistungen. Insbesondere nutzen wir Ihre Daten zu folgenden Zwecken:",
         "list": {
-          "p1": "Processing your bets and transactions. This includes your use of credit card and\n              online payment systems;",
-          "p2": "Providing you with gaming and other ancillary services that you seek from our Website;",
-          "p3": "Providing registered players with information about our promotional offers, or\n              providing promotional information from our selected business partners, associates and\n              affiliates (only if players specifically consented to receiving such marketing\n              material);",
-          "p4": "Monitoring and investigating transactions for the purpose of preventing fraud, terms\n              abuse, money laundering and other illegal or irregular gaming activities;"
+          "p1": "Bearbeitung Ihrer Einsätze und Buchungsvorgänge. Das schließt Ihre Verwendung von Kreditkarten und Online-Zahlungsabwicklungssystemen ein;",
+          "p2": "Bereitstellung von Glücksspielen sowie von Hilfsdiensten, die Sie von unserer Webseite erwarten;",
+          "p3": "Versorgung der angemeldeten Spielerinnen und Spieler mit Informationen zu Werbeangeboten sowie zur Zusendung von Werbung ausgewählter Partner-, Verbund- und Tochterunternehmen (nach ausdrücklicher Einwilligung der Spielerinnen und Spieler zum Empfang derartigen Werbematerials);",
+          "p4": "d. zur Überwachung und Untersuchung von Zahlungsvorgängen zur Verhütung von Betrug, Missbrauch, Geldwäsche und sonstiger ungesetzlicher oder ordnungswidriger Machenschaften im Spielbetrieb;"
         }
       },
       "personalInformation": {
-        "title": "OBTAINING PERSONAL INFORMATION",
+        "title": "ERFASSUNG PERSONENBEZOGENER DATEN",
         "text": [
-          "We shall not collect any Personal Information about you without your knowledge. We may,\n          however, automatically collect certain data about you where you would have provided such\n          information through the use of our services and through your interactions with us.",
-          "We may also lawfully receive certain Personal Information from online vendors and service\n          providers, such as fraud prevention companies. In addition, we retain the right to engage\n          the services of third-party providers to render technical support, so as to process your\n          online transactions and source gaming content.",
-          "Please understand that we may be granted access to any information you may provide to such\n          vendors, service providers and third-party e-commerce services. Rest assured that we will\n          use and safeguard any Personal Information so obtained, as set out in this Policy. Any\n          information that you provide will only be disclosed to third parties outside the Company\n          in accordance with this Privacy Policy, and we shall take any necessary steps to ensure\n          that our agreements with third-party service providers always protect your private      information."
+          "Wir erfassen ohne Ihr Wissen keine personenbezogenen Daten von Ihnen. Möglicherweise werden allerdings bestimmte Daten zu Ihnen automatisch erfasst, wenn Sie uns diese durch die Nutzung unserer Dienstleistungen sowie durch Ihren Geschäftsverkehr mit uns zur Kenntnis bringen.",
+          "Außerdem können wir von Online-Anbietern und -Dienstleistern, zum Beispiel von Unternehmen zur Betrugsbekämpfung, rechtmäßig bestimmte personenbezogene Daten erhalten. Darüber hinaus behalten wir uns vor, die Dienste Dritter in Anspruch zu nehmen, um technische Kundendienstleistungen zu erbringen sowie um Ihren Online-Zahlungsverkehr abzuwickeln und Spielinhalte zu beziehen.",
+          "Nehmen Sie bitte zur Kenntnis, dass uns Zugang zu Angaben gewährt werden kann, die Sie diesen Anbietern, Dienstleistern und externen eCommerce-Dienstleistern gegenüber gemacht haben. Seien Sie unbesorgt, wir werden alle von uns erfassten personenbezogenen Daten nur so nutzen und so sichern, wie wir es in der hier vorliegenden Richtlinie dargelegt haben. Alle uns überlassenen Daten werden nur in Übereinstimmung mit dieser Datenschutzrichtlinie an externe Dritte weitergegeben, und wir ergreifen alle erforderlichen Maßnahmen um sicherzustellen, dass Ihre personenbezogenen Daten stets durch unsere Verträge mit diesen externen Auftragnehmern geschützt sind."
         ]
       }
     },
