--- a/locales/en.json
+++ b/locales/en.json
@@ -388,7 +388,7 @@
     "mayMadness": {
       "title": "May<br/> madness<br/> by spinomenal",
       "name": "May madness by spinomenal",
-      "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round II! It runs between May 18, 2021, 00:00 GMT, and May 24, 2021, 23:59 GMT."
+      "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round III! It runs between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT."
     }
   },
   "tournaments": {
@@ -449,14 +449,14 @@
   },
   "mayMadness": {
     "prize": "€ 60 000",
-    "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round II! It runs between May 18, 2021, 00:00 GMT, and May 24, 2021, 23:59 GMT.",
+    "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round III! It runs between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT.",
     "textMobile": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!",
     "terms": [
       {
-        "text": "Round II runs between between May 18, 2021, 00:00 GMT, and May 24, 2021, 23:59 GMT."
+        "text": "Round III runs between between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT."
       },
       {
-        "text": "Participating games in Round II:<br/><br/>●  Queen Of Fire<br/>●  Egyptian Rebirth II<br/>●  Magical Amazon"
+        "text": "Participating games in Round III:<br/><br/>●  Book Of Rebirth<br/>●  Origins Of Lilith<br/>●  4 Horsemen II"
       },
       {
         "text": "The minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
