--- a/locales/en.json
+++ b/locales/en.json
@@ -211,7 +211,9 @@
     },
     "allProviders": "All providers",
     "tableIsOpen": "Table is open",
-    "tableIsClosed": "Table is closed"
+    "tableIsClosed": "Table is closed",
+    "topWinners": "Top winners",
+    "lastWinners": "Latest winners"
   },
   "filters": {
     "filteredBy": "Filtered by",
