NINE-457 corrected texts

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -187,7 +187,7 @@
       },
       "highroller": {
         "title": "Bonus pro<br/> velké hráče",
-        "text": "až €500"
+        "text": "<span class=\"Colored\">až €500</span>"
       }
     },
     "advantages" : {
