--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -192,7 +192,7 @@
       },
       "highroller": {
         "title": "Highroller<br/> bonus",
-        "text": "up to $800"
+        "text": "<span class=\"Colored\">up to $800</span>"
       }
     },
     "advantages": {
