--- a/locales/de.json
+++ b/locales/de.json
@@ -192,7 +192,7 @@
       },
       "highroller": {
         "title": "HIGHROLLER-BONUS<br/> FÜR BESONDERE<br/> EINSATZFREUDE",
-        "text": "bis zu €500"
+        "text": "<span class=\"Colored\">bis zu €500</span>"
       }
     },
     "advantages": {
